
  - bug #66588: Arithmetic's 'trim' operator does not produce 0x0 image
    when all the image is blank.

  - bug #66657: gal_fits_img_read not passing hdu_option_name; found with
    the help of Sepideh Eskandarlou.

  - bug #66693: MakeProfile crashes with segmentation fault with when
    --customimg is given and the oversampling factor is larger than 1.

  - bug #66869: Crop segmentation fault leading to unpredictable return
    values. Reported by Raul Infante-Sainz.





* Noteworthy changes in release 0.23 (library 21.0.0) (2024-07-13)
** New publications

  - https://ui.adsabs.harvard.edu/abs/2024RNAAS...8..168E by Eskandarlou
    and Akhlaghi describing the newly added polar plot capability of
    'astscript-radial-profile' (see the figure in the paper).

** New features
*** Arithmetic

  --append: if the output file already exists, don't delete it, add the
    outputs as extra HDUs (by default, the output file is deleted). If the
    output does not exist, then this option has no affect.

  - New operators (also available in "Column Arithmetic" of the Table
    program):

    - jy-to-wavelength-flux-density: converts Janskys to wavelength flux
      density (erg/cm^2/s/Å) at the given wavelength.

    - filter-madclip-mean: filter/smooth the input using MAD-clipped mean.

    - filter-madclip-median: filter/smooth the input using MAD-clipped
      median.

    - free: free (from memory) the top operand on the stack of
      operands. This is useful in combination with operators that produce
      more than one output operand.

    - madclip-maskfilled: mask (set to NaN) all input elements that are
      outliers (defined by MAD-clipping). Combined with the stacking
      operators this allows removing large contiguous outliers in your
      final stacked datasets.

    - siglclip-maskfilled: similar to 'madclip-maskfilled', but defining
      outliers by Sigma-clipping.

    - zeropoint-change: change the zero point of the input data set to a